2003-11-28  JP Rosevear <jpr@ximian.com>

	* gui/e-meeting-store.c (e_meeting_store_get_type): allocate the
	type information correctly

2003-11-26  Hans Petter Jansson  <hpj@ximian.com>

	* gui/calendar-offline-handler.c (backend_go_offline): e_cal_new () ->
	e_cal_new_from_uri ().
	(backend_go_online): Ditto.
	(calendar_offline_handler_init): Ditto.

	* gui/comp-editor-factory.c (open_client): Ditto.

	* gui/e-itip-control.c (start_calendar_server): Ditto.
	(object_requested_cb): Ditto.

	* gui/e-tasks.c (e_tasks_add_todo_uri): Ditto.

	* gui/gnome-cal.c (gnome_calendar_construct): Ditto.
	(gnome_calendar_add_event_uri): Ditto.

	* gui/alarm-notify/alarm-notify.c (alarm_notify_add_calendar): Ditto.

	* importers/icalendar-importer.c (load_file_fn): Ditto.
	(vcal_load_file_fn): Ditto.
	(gnome_calendar_import_data_fn): Ditto.

	* gui/dialogs/copy-source-dialog.c (copy_source): Pass sources to
	e_cal_new ().

2003-11-24  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/copy-source-dialog.c (copy_source): use the correct
	icalcomponent when calling e_cal_create_object.

	* gui/tasks-control.c (sensitize_commands): no need to have a
	selection for Paste to work.

	* gui/e-calendar-table.c (e_calendar_table_show_popup_menu): disable
	editing items if the selected task list is read only, not if it's not.

2003-11-24  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/new-task-list.glade:
	* gui/dialogs/new-task-list.[ch]: new files containing the
	implementation of the 'New Task List' dialog.

	* gui/dialogs/Makefile.am: added new files.

	* gui/dialogs/new-calendar.c (new_calendar_dialog): use G_STRLOC
	for g_warning messages.

	* gui/tasks-component.c (new_task_list_cb): implemented.

2003-11-24  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/copy-source-dialog.c (copy_source_dialog): actually
	add the source selector to the dialog's box.

2003-11-23  Rodrigo Moya <rodrigo@ximian.com>

	* gui/tasks-component.c: